[tool.poetry]
name = "sqlalchemy-study"
version = "0.1.0"
description = ""
authors = ["devkya <kihaok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
pytest = "^8.3.4"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
